<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.beerdetail.BeerDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/beer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:text="Bulleit Bourbon Ten Fidy" />

        <LinearLayout
            android:id="@+id/description_title_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_paragraph"
                android:tint="#FFC1C1C1" />

            <TextView
                android:id="@+id/tv_style_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/the_beer" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:visibility="gone"
            tools:text="Beer description"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/style_description_title_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_paragraph"
                android:tint="#FFC1C1C1" />

            <TextView
                android:id="@+id/tv_more_style_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/the_style" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_style_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:visibility="gone"
            tools:text="Beer description"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/hops_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_hop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:rotation="45"
                android:src="@drawable/ic_hop" />

            <TextView
                android:id="@+id/tv_hop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/hops"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
